# auto_azure_export

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
