[project]
name = "auto-azure-export"
version = "0.1.0"
description = "MCP Server for Microsoft Graph Explorer automation using Playwright"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
